--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>React-Babel-Webpack Boileplates </title>
+  <title>React-Babel-Webpack Boileplate</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF8">
   <head>
   	    <script src="../js/d3.js"></script>
