--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id='top-line-chart'>
     </div>
-    <script type="text/javascript" src="./../build/bundle.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
